Encodage UTF-8 pour correction accent

--- a/documentation/html/Structure_8h.html
+++ b/documentation/html/Structure_8h.html
@@ -172,7 +172,7 @@ Macros</h2></td></tr>
 <div class="textblock"><p>Structure utile au roguelike. </p>
 <dl class="section author"><dt>Auteur</dt><dd>Tony Marteau, Dimitri Bernot, Marvin Jean </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>1.0.0 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>18 décembre 2015 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>18 dÃ©cembre 2015 </dd></dl>
 </div></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
