--- a/documentation/html/check_8c.html
+++ b/documentation/html/check_8c.html
@@ -432,7 +432,7 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>CheckTester</b> ()</t
         </tr>
       </table>
 </div><div class="memdoc">
-<p>Retourne 1 si il y a une salle au coordonné saisie </p>
+<p>Retourne 1 si il y a une salle au coordonnÃ© saisie </p>
 
 </div>
 </div>
