--- a/documentation/html/jeu_8h.html
+++ b/documentation/html/jeu_8h.html
@@ -116,7 +116,7 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>JeuContinuer</b> (<a 
 <div class="textblock"><p>prototype fonction jeu </p>
 <dl class="section author"><dt>Auteur</dt><dd>Tony Marteau, Dimitri Bernot, Marvin Jean </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>1.0.0 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>18 décembre 2015 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>18 dÃ©cembre 2015 </dd></dl>
 </div></div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
