--- a/documentation/html/combat_8h.html
+++ b/documentation/html/combat_8h.html
@@ -110,7 +110,7 @@ Fonctions</h2></td></tr>
 <div class="textblock"><p>Prototype fonction combat joueur-&gt;monstre. </p>
 <dl class="section author"><dt>Auteur</dt><dd>Tony Marteau, Dimitri Bernot, Marvin Jean </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>1.0.0 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>18 décembre 2015 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>18 dÃ©cembre 2015 </dd></dl>
 </div><h2 class="groupheader">Documentation des fonctions</h2>
 <a class="anchor" id="a991abc3918f7229d4774a681c5c57113"></a>
 <div class="memitem">
