--- a/documentation/html/deplacement_8h.html
+++ b/documentation/html/deplacement_8h.html
@@ -113,7 +113,7 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>DeplacementTester</b>
 <div class="textblock"><p>Prototype donction deplacementpersonnage. </p>
 <dl class="section author"><dt>Auteur</dt><dd>Tony Marteau, Dimitri Bernot, Marvin Jean </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>1.0.0 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>18 décembre 2015 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>18 decembre 2015 </dd></dl>
 </div><h2 class="groupheader">Documentation des fonctions</h2>
 <a class="anchor" id="a5712778a9b612d86a92e569cacb1391f"></a>
 <div class="memitem">
@@ -140,7 +140,7 @@ void&#160;</td><td class="memItemRight" valign="bottom"><b>DeplacementTester</b>
 </div><div class="memdoc">
 
 <p>Deplace le personnage et retourne l'id du monstre si il y a un combat a effectuer. </p>
-<p>Deplace le personnage et retourne l'id du monstre si il y a un combat a effectué</p>
+<p>Deplace le personnage et retourne l'id du monstre si il y a un combat a effectue</p>
 <dl class="params"><dt>ParamÃ¨tres</dt><dd>
   <table class="params">
     <tr><td class="paramname">cmd_move</td><td>Le dÃ©placement Ã  effectuer </td></tr>
